--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,62 @@
 <app-header></app-header>
+<div class ="container-fluid" >     <div class ="row " >
+             <div class ="col-12	 col-sm-12 col-md-2 col-lg-2 col-xl-2">
+                    <div class="card">
+                            <div class="card-body">Basic card</div>
+                          </div>
+            </div>
+            <div class ="col-12	 col-sm-12 col-md-2 col-lg-2 col-xl-2">
+                    <div class="card">
+                            <div class="card-body">Basic card</div>
+                          </div>
+            </div>
+            <div class ="col-12	 col-sm-12 col-md-2 col-lg-2 col-xl-2">
+                    <div class="card">
+                            <div class="card-body">Basic card</div>
+                          </div>
+            </div>
+            <div class ="col-12	 col-sm-12 col-md-2 col-lg-2 col-xl-2">
+                    <div class="card">
+                            <div class="card-body">Basic card</div>
+                          </div>
+            </div>
+            <div class ="col-12	 col-sm-12 col-md-2 col-lg-2 col-xl-2">
+                    <div class="card">
+                            <div class="card-body">Basic card</div>
+                          </div>
+            </div>
+            <div class ="col-12	 col-sm-12  col-md-2 col-lg-2 col-xl-2">
+                    <div class="card">
+                            <div class="card-body">Basic card</div>
+                          </div>
+            </div>
+
+        </div>
+
+        <div class ="row">
+            <div class ="col-12	 col-sm-12 col-md-3 col-lg-3 col-xl-3">
+                    <div class="card" >
+                            <div class="card-body">Basic card</div>
+                          </div>
+                          <div class="card">
+                                <div class="card-body">Basic card</div>
+                              </div>
+            </div>
+            <div class ="col-12	 col-sm-12 col-md-6 col-lg-6 col-xl-6">
+                    <div class="card">
+                            <div class="card-body">Basic card</div>
+                          </div>
+                         
+            </div>
+
+            <div class ="col-12	 col-sm-12 col-md-3 col-lg-3 col-xl-3">
+                    <div class="card">
+                            <div class="card-body">Basic card</div>
+                          </div>
+                          <div class="card">
+                                <div class="card-body">Basic card</div>
+                              </div>
+            </div>
+
+        </div>
+ </div>
