--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,7 +3,7 @@
 50% {height: 20px;width: 10px;}
 }
 body{
-    background: #f0f0f0;
+    background: #eeeeee !important;
     margin: 0px;
     padding: 0px;
     
