--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -464,7 +464,12 @@
   .chiller-theme .sidebar-wrapper .sidebar-menu .header-menu span {
       color: #6c7b88;
   }
-  
+.row{
+  margin-top: 10px;
+}  
+.card{
+  margin-bottom: 10px;
+}
   .chiller-theme .sidebar-footer {
       background: #3a3f48;
       box-shadow: 0px -1px 5px #282c33;
