--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,58 +1,129 @@
-<div style="position: sticky;top: 0px;z-index: 1301;color: #f0f0f0;">
-    <div
-        style="color: rgba(0, 0, 0, 0.87); background: white; transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms; box-sizing: border-box; font-family: Roboto, sans-serif; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 6px, rgba(0, 0, 0, 0.12) 0px 1px 4px; border-radius: 0px; position: sticky; z-index: 1301; width: 100%; display: flex; padding-left: 24px; padding-right: 24px; min-height: 54px;">
+<div style="position: inherit;top: 0px;z-index: 1301;color: #f0f0f0;padding-left: 20px">
 
-        <button tabindex="0" type="button"
-            style="border: 10px; box-sizing: border-box; display: inline-block; font-family: Roboto, sans-serif; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); cursor: pointer; text-decoration: none; margin: 8px 8px 0px -16px; padding: 12px; outline: none; font-size: 0px; font-weight: inherit; position: relative; overflow: visible; transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms; width: 48px; height: 48px; background: none;">
-            <div><span
-                    style="height: 100%; width: 100%; position: absolute; top: 0px; left: 0px; overflow: hidden; pointer-events: none; z-index: 1;"></span><svg
-                    viewBox="0 0 24 24"
-                    style="display: inline-block; color: rgb(44, 79, 111); fill: rgb(44, 79, 111); height: 24px; width: 24px; user-select: none; transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;">
-                    <path d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"></path>
-                </svg></div>
-        </button>
-        <div
-            style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis; margin: 0px; padding-top: 0px; letter-spacing: 0px; font-size: 24px; font-weight: 400; color: rgb(44, 79, 111); height: 70px; line-height: 64px; flex: 1 1 0%; position: sticky;">
-            <div style="height: 70px;width: 74%;
+
+    <div style="    margin: 0px; padding-top: 0px;       height: 140px;  flex: 1 1 0%; position: sticky;">
+        <div style="height: 140px;width: 100%;
             float: left;
-            height: 70px;">
-                <img src="https://thumb.ibb.co/eVWTk0/upcl.png" alt="upcl" border="0"
-                    style="height: 60px; padding-right: 10px;">
-                <img src="assets/img/xenius-logo.png" alt="Xenius" border="0" style="height: 22px;">
-                <input type="submit" disabled="" value="Submit"
-                    style="border: 1px solid black; height: 36px; font-size: 16px; float: right; margin-right: 16px; margin-top: 16px; line-height: 21px; background: gray; width: 10%; color: rgb(255, 255, 255);">
-                <input id="serach_txt" type="text" name="serach_txt" placeholder="Search meter no...." value=""
-                    style="height: 35px; border: 1px solid black; font-size: 16px; background-color: transparent; background-image: url(&quot;../img/icon/search.png&quot;); background-repeat: no-repeat; background-position: 0px 4px; float: right; margin-top: 16px; padding: 5px;">
+            height: 140px;">
+            <div class="row">
+                <div class="col-3">
 
-
-            </div>
-            <div style="margin-top: 8px; margin-right: -16px; margin-left: auto;">
-                <div class="TopBar__RightMenu-sc-1ire1c4-0 dPsofH">
-                    <div style="background: rgb(53, 72, 112); color: white;     padding: 5px 15px;">20/09/2019</div>
-                    <div style="background: rgb(53, 72, 112);     padding: 5px 15px;">
-                        <div style="color: white; text-align: center;"><span style="padding: 4px;">10:42:38 AM</span>
+                    <img src="https://thumb.ibb.co/eVWTk0/upcl.png" alt="upcl" border="0" style="height: 93px;
+                    padding: 0px;
+                    margin-top: 18px;">
+                    <img src="assets/img/xenius-logo.png" alt="Xenius" border="0" style="height: 31px;">
+                </div>
+                <div class="col-6">
+                    <div class="row" style="margin-top:8%">
+                        <div _ngcontent-kme-c2="" class="col-2 offset-2">
+                            <p _ngcontent-kme-c2="" class="first" style="
+                                    font-size: 42px;
+                                "><img src ="https://www.vibestest.com/client_project/clients_website_templates/2018/Xenius_Dashboard/images/dashboard.png"></p><span
+                                _ngcontent-kme-c2="" class="second"
+                                style="position: absolute;top: 90%;right: 0;left:8%">Dashboard</span>
                         </div>
-                    </div>
-                    <div class="TopBar__MenuButton-sc-1ire1c4-1 dvtunH">
-                        <div style="position: relative; display: inline-block; padding: 12px;"><img
-                                src="https://image.ibb.co/mycg4q/Notifications.png" style="margin: 0px 0px 10px 17px;" alt="Notifications" height="24"
-                                border="0"><span
-                                style="display: flex; flex-flow: row wrap; place-content: center; align-items: center; position: absolute; top: 14px;
-                                right: 0px; font-weight: 500; font-size: 13px; width: 24px; height: 24px; border-radius: 50%; background-color: rgb(0, 169, 157); color: rgb(255, 255, 255); cursor: pointer;">4</span>
-                        </div>
-                    </div>
-                    <div class="TopBar__MenuButton-sc-1ire1c4-1 dvtunH">
-                        <div style="display: inline-block; position: relative;"><button tabindex="0" type="button"
-                                style="margin: 0px 11px 10px 10px !important;border: 10px; box-sizing: border-box; display: inline-block; font-family: Roboto, sans-serif; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); cursor: pointer; text-decoration: none;   padding: 8px; outline: none; font-size: 0px; font-weight: inherit; position: relative; overflow: visible; transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms; width: 48px; height: 48px; background: none;">
-                                <div><img src="https://image.ibb.co/dEtccA/Login.png"  alt="Login" height="24"
-                                        border="0"></div>
-                            </button>
-                            <div style="display: none;"></div>
-                        </div>
+                        <div _ngcontent-kme-c2="" class="col-2">
+                                <p _ngcontent-kme-c2="" class="first" style="
+                                        font-size: 42px;
+                                    "><img src ="https://www.vibestest.com/client_project/clients_website_templates/2018/Xenius_Dashboard/images/feeder.png"></p><span
+                                    _ngcontent-kme-c2="" class="second"
+                                    style="position: absolute;top: 90%;;">Feeders</span>
+                            </div>
+                            <div _ngcontent-kme-c2="" class="col-2">
+                                    <p _ngcontent-kme-c2="" class="first" style="
+                                            font-size: 42px;
+                                        "><img src ="https://www.vibestest.com/client_project/clients_website_templates/2018/Xenius_Dashboard/images/data.png"></p><span
+                                        _ngcontent-kme-c2="" class="second"
+                                        style="position: absolute;top: 90%;left:8%;">Feeder Data</span>
+                                </div>
+                                <div _ngcontent-kme-c2="" class="col-2">
+                                        <p _ngcontent-kme-c2="" class="first" style="
+                                                font-size: 42px;
+                                            "><img src ="https://www.vibestest.com/client_project/clients_website_templates/2018/Xenius_Dashboard/images/details.png"></p><span
+                                            _ngcontent-kme-c2="" class="second"
+                                            style="position: absolute;top: 90%;left :5%;">Feeder Details</span>
+                                    </div>
+                                    <div _ngcontent-kme-c2="" class="col-2">
+                                            <p _ngcontent-kme-c2="" class="first" style="
+                                                    font-size: 42px;
+                                                "><img src ="https://www.vibestest.com/client_project/clients_website_templates/2018/Xenius_Dashboard/images/feeder.png"></p><span
+                                                _ngcontent-kme-c2="" class="second"
+                                                style="position: absolute;top: 90%;left:8%;">MIS Report</span>
+                                        </div> 
+                                        
                     </div>
                 </div>
+                <div class="col-3">
+                    <div class="row">
+                        <div class="col-6  offset-6" style="float: right ;padding-right: 0px">
+                            <div class="row">
+                                <div class=" offset-3 col-3" style="padding-right: 0px">
+                                    <button _ngcontent-mbq-c2=""
+                                        style=" border: 10px; box-sizing: border-box; display: inline-block; font-family: Roboto, sans-serif; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); cursor: pointer; text-decoration: none;   padding: 8px; outline: none; font-size: 0px; font-weight: inherit; position: relative; overflow: visible; transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms; width: 48px; height: 48px; background: none;"
+                                        tabindex="0" type="button">
+                                        <div _ngcontent-mbq-c2=""><img _ngcontent-mbq-c2="" alt="Login" border="0"
+                                                height="24" src="https://image.ibb.co/dEtccA/Login.png"></div>
+                                    </button>
+
+                                </div>
+
+                                <div class="col-3">
+                                    <button _ngcontent-mbq-c2=""
+                                        style=" border: 10px; box-sizing: border-box; display: inline-block; font-family: Roboto, sans-serif; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); cursor: pointer; text-decoration: none;   padding: 8px; outline: none; font-size: 0px; font-weight: inherit; position: relative; overflow: visible; transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms; width: 48px; height: 48px; background: none;"
+                                        tabindex="0" type="button">
+                                        <div _ngcontent-mbq-c2=""><img _ngcontent-mbq-c2="" alt="Login" border="0"
+                                                height="24" src="https://image.ibb.co/mycg4q/Notifications.png"></div>
+                                    </button>
+
+                                </div>
+
+                                <div class="col-3">
+                                    <button _ngcontent-mbq-c2=""
+                                        style=" border: 10px; box-sizing: border-box; display: inline-block; font-family: Roboto, sans-serif; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); cursor: pointer; text-decoration: none;   padding: 8px; outline: none; font-size: 0px; font-weight: inherit; position: relative; overflow: visible; transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms; width: 48px; height: 48px; background: none;"
+                                        tabindex="0" type="button">
+                                        <div _ngcontent-mbq-c2=""><img _ngcontent-mbq-c2="" alt="Login" border="0"
+                                                height="24" class="avtar"
+                                                src="assets/img/525622_414622265214641_863069405_n.jpg"></div>
+                                    </button>
+
+                                </div>
+                            </div>
+                        </div>
+
+
+
+                    </div>
+                    <div class="row" style="
+                    float: right;
+                ">
+                        <div class ="col-6 offset-6">
+                            <span style="color: white;font-size: 13px;"><strong>Aug 2019 - 4:00 pm</strong> </span>
+                        </div>
+</div>
+<div class ="row" style="float:right">
+    <div class ="col-12">
+            <div class="btn-group" dropdown style="float:right">
+                    <button id="button-basic" style=" border-radius: 10px;     float: right;  background: #3497ac;" dropdownToggle type="button" class="btn btn-primary dropdown-toggle"
+                            aria-controls="dropdown-basic">
+                      Notification / Exception <span class="caret"></span>
+                    </button>
+                    <ul id="dropdown-basic" *dropdownMenu class="dropdown-menu"
+                        role="menu" aria-labelledby="button-basic">
+                      <li role="menuitem"><a class="dropdown-item" href="#">Action</a></li>
+                      <li role="menuitem"><a class="dropdown-item" href="#">Another action</a></li>
+                      <li role="menuitem"><a class="dropdown-item" href="#">Something else here</a></li>
+                      <li class="divider dropdown-divider"></li>
+                      <li role="menuitem"><a class="dropdown-item" href="#">Separated link</a>
+                      </li>
+                    </ul>
+                  </div>
+                  
+    </div>
+</div>
+                </div>
+
             </div>
         </div>
-
-
     </div>
+
+</div>
