--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,7 +3,8 @@
 50% {height: 20px;width: 10px;}
 }
 body{
-    background: #eeeeee !important;
+    background: linear-gradient(to right, #3d5c88 0%, #32c5bb 100%)
+    !important;
     margin: 0px;
     padding: 0px;
     
