--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,10 +8,10 @@
             <div class="row">
                 <div class="col-3">
 
-                    <img src="https://thumb.ibb.co/eVWTk0/upcl.png" alt="upcl" border="0" style="height: 93px;
+                    <!-- <img src="https://thumb.ibb.co/eVWTk0/upcl.png" alt="upcl" border="0" style="height: 93px;
                     padding: 0px;
-                    margin-top: 18px;">
-                    <img src="assets/img/xenius-logo.png" alt="Xenius" border="0" style="height: 31px;">
+                    margin-top: 18px;"> -->
+                    <img src="assets/img/white.png" alt="Xenius" border="0" style="height: 91px;">
                 </div>
                 <div class="col-6">
                     <div class="row" style="margin-top:8%">
@@ -100,20 +100,20 @@
                             <span style="color: white;font-size: 13px;"><strong>Aug 2019 - 4:00 pm</strong> </span>
                         </div>
 </div>
-<div class ="row" style="float:right">
+<div class ="row " style="float:right ;z-index: 9999;">
     <div class ="col-12">
-            <div class="btn-group" dropdown style="float:right">
-                    <button id="button-basic" style=" border-radius: 10px;     float: right;  background: #3497ac;" dropdownToggle type="button" class="btn btn-primary dropdown-toggle"
+            <div class="btn-group drop" dropdown style="float:right">
+ 
+                    <button id="button-basic" style=" border-radius: 10px;     float: right;  background: #3497ac;"  data-flip="true" aria-haspopup="true" aria-expanded="true" dropdownToggle type="button" class="btn btn-primary dropdown-toggle"
                             aria-controls="dropdown-basic">
                       Notification / Exception <span class="caret"></span>
                     </button>
-                    <ul id="dropdown-basic" *dropdownMenu class="dropdown-menu"
+                    <ul id="dropdown-basic " *dropdownMenu class="dropdown-menu chs"
                         role="menu" aria-labelledby="button-basic">
-                      <li role="menuitem"><a class="dropdown-item" href="#">Action</a></li>
-                      <li role="menuitem"><a class="dropdown-item" href="#">Another action</a></li>
-                      <li role="menuitem"><a class="dropdown-item" href="#">Something else here</a></li>
-                      <li class="divider dropdown-divider"></li>
-                      <li role="menuitem"><a class="dropdown-item" href="#">Separated link</a>
+                      <li role="menuitem"><a class="dropdown-item" >10 worst feeder from last seven day</a></li>
+                      <li role="menuitem"><a class="dropdown-item ">6 worst feeders from past 10 days</a></li>
+                       <li class="divider dropdown-divider"></li>
+                      <li role="menuitem"><a class="dropdown-item"  >15 Hours Suspicious Outage On Feeders</a>
                       </li>
                     </ul>
                   </div>
