--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -20,7 +20,8 @@
                 
                 <div class="input-group mb-3">
                     <div class="input-group-prepend">
-                      <span class="input-group-text">$</span>
+                      <span class="input-group-text"><i class="fa fa-user-o" aria-hidden="true"></i>
+                      </span>
                     </div>
                     <input type="text" class="form-control"  formControlName="login_id"   aria-label="Amount (to the nearest dollar)" placeholder="User Name">
                     <div class="input-group-append">
@@ -28,7 +29,8 @@
                   </div>
                   <div class="input-group mb-3">
                     <div class="input-group-prepend">
-                      <span class="input-group-text">$</span>
+                      <span class="input-group-text"><i class="fa fa-lock" aria-hidden="true"></i>
+                      </span>
                     </div>
                     <input type="text" class="form-control"  formControlName="password"   aria-label="Amount (to the nearest dollar)" placeholder="Password">
                     <div class="input-group-append">
