--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -102,7 +102,7 @@
 </div>
 <div class ="row " style="float:right ;z-index: 9999;">
     <div class ="col-12">
-            <div class="btn-group drop" dropdown style="float:right">
+            <!-- <div class="btn-group drop" dropdown style="float:right">
  
                     <button id="button-basic" style=" border-radius: 10px;     float: right;  background: #3497ac;"  data-flip="true" aria-haspopup="true" aria-expanded="true" dropdownToggle type="button" class="btn btn-primary dropdown-toggle"
                             aria-controls="dropdown-basic">
@@ -116,7 +116,18 @@
                       <li role="menuitem"><a class="dropdown-item"  >15 Hours Suspicious Outage On Feeders</a>
                       </li>
                     </ul>
-                  </div>
+                  </div> -->
+                  <button mat-button [matMenuTriggerFor]="menu" style=" border-radius: 10px;     float: right;  background: #3497ac;"  data-flip="true"  type="button" class="btn btn-primary dropdown-toggle"
+                  aria-controls="dropdown-basic">
+            Notification / Exception <span class="caret"></span>
+          </button>
+<mat-menu #menu="matMenu">
+  <button mat-menu-item>10 worst feeder from last seven day</button>
+  <button mat-menu-item>6 worst feeders from past 10 days</button>
+  <button mat-menu-item>  15 Hours Suspicious Outage On Feeders</button>
+
+
+</mat-menu>
                   
     </div>
 </div>
