--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,6 +9,8 @@ body{
     padding: 0px;
     
 }
+ @import '@angular/material/prebuilt-themes/indigo-pink.css';
+
 .checkbox{background-color:#fff;display:inline-block;height:28px;margin:0 .25em;width:28px;border-radius:4px;border:1px solid #ccc;float:right}
 .checkbox span{display:block;height:28px;position:relative;width:28px;padding:0}
 .checkbox span:after{-moz-transform:scaleX(-1) rotate(135deg);-ms-transform:scaleX(-1) rotate(135deg);-webkit-transform:scaleX(-1) rotate(135deg);transform:scaleX(-1) rotate(135deg);-moz-transform-origin:left top;-ms-transform-origin:left top;-webkit-transform-origin:left top;transform-origin:left top;border-right:4px solid #fff;border-top:4px solid #fff;content:'';display:block;height:20px;left:3px;position:absolute;top:15px;width:10px}
