--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -8,10 +8,10 @@
 	<div class="content clearfix" style ="    margin-top: 11px;">
 		 
  		
-			<img src ="assets/img/xenius-logo.png" style="    margin: auto;
-			margin-left: 59px;
+			<img src ="assets/img/red.png" style="    margin: auto;
+			margin-left: 35px;
 			padding: 2px;
-			width: 192px;
+			width: 222px;
 			margin-bottom: 11px;">		
 			
 			<div class="login-fields">
